--- a/说明.md
+++ b/说明.md
@@ -1,3 +1,9 @@
+ubuntu 20.04; ros noetic; 安装驱动 https://github.com/ros-industrial/universal_robot 
+
+https://github.com/UniversalRobots/Universal_Robots_ROS_Driver?tab=readme-ov-file 
+
 1.编译ros包
 2.在三个控制台中source ./devel/setup.sh
-3.
+3.  控制台1 roslaunch qy_dual_arm both_arm_bringup.launch
+4.  控制台2 roslaunch qy_dual_arm both_arm_moveit_planning_execution.launch
+5. 控制台3 roslaunch qy_dual_arm both_arm_moveit_rviz.launch
